--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,10 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
-    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" /> -->
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <style>
       .gradient {
@@ -104,11 +107,8 @@
     function check(e) {
       var target = (e && e.target) || (event && event.srcElement);
 
-      //Nav Menu
       if (!checkParent(target, navMenuDiv)) {
-        // click NOT on the menu
         if (checkParent(target, navMenu)) {
-          // click on the link
           if (navMenuDiv.classList.contains("hidden")) {
             navMenuDiv.classList.remove("hidden");
           } else {
@@ -130,6 +130,11 @@
       return false;
     }
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"></script>
+  <script src="/src/assets/js/main.js"></script>
+  <script src="/src/assets/js/swiper-bundle.min.js"></script>
+  <script src="/src/assets/js/wow.min.js"></script>
 </html>
 
 
